--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dark-modern-plus",
   "displayName": "Dark Modern+",
   "description": "This theme is a modification of the built-in Default Dark Modern theme, primarily altering the colors of field, property, enum type, struct type, and interface type names to make C# code appear more readable.",
+  "publisher": "YY-GamePlayer",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.85.0"
