--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "dark-modern-plus",
   "displayName": "Dark Modern+",
-  "description": "This theme is a modification of the built-in Default Dark Modern theme, primarily altering the colors of field, property, enum type, struct type, and interface type names to make C# code appear more readable.",
+  "description": "This theme is a modification of the built-in Default Dark Modern theme to make C# code appear more readable.",
   "publisher": "YY-GamePlayer",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "engines": {
     "vscode": "^1.85.0"
   },
@@ -21,6 +21,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yuyang9119/dark-modern-plus.git"
+    "url": "git+https://github.com/yuyang9119/dark-modern-plus.git"
   }
 }
