--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "dark-modern-plus",
   "displayName": "Dark Modern+",
+  "icon": "Icon.png",
+  "galleryBanner": {
+    "color": "#3c4854"
+  },
   "description": "This theme is a modification of the built-in 'Default Dark Modern' theme to make C# code appear more readable.",
   "publisher": "YY-GamePlayer",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "engines": {
     "vscode": "^1.85.0"
   },
